--- a/.github/DOCUMENT.yml
+++ b/.github/DOCUMENT.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
 
@@ -14,9 +14,7 @@ jobs:
           python-version: '3.8'
 
       - name: Upgrade pip
-        run: |
-          # install pip=>20.1 to use "pip cache dir"
-          python3 -m pip install --upgrade pip
+        run: python3 -m pip install --upgrade pip
       - name: Get pip cache dir
         id: pip-cache
         run: echo "::set-output name=dir::$(pip cache dir)"
@@ -28,8 +26,6 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - name: Install dependencies
-        run: python3 -m pip install -r docs/requirements.txt
 
       - name: Build html
         run: cd docs && make html
