--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Get pip cache dir
         id: pip-cache
         run: echo "::set-output name=dir::$(pip cache dir)"
+      - name: Get pip cache dir
+        run: pip install -r docs/requirements.txt
 
       - name: Cache dependencies
         uses: actions/cache@v2
