--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,6 @@
+# Python
 pip
-bump2version
 wheel
-watchdog
 tox
 coverage
 sphinx
@@ -9,10 +8,12 @@ sphinx_rtd_theme
 twine
 pre-commit
 
+# Formatting
 black
 flake8
 isort
 
+# Flask extensions
 Flask==2.2.2
 click ==8.1.3
 Flask-JWT-Extended == 4.4.4
