--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,25 +1,28 @@
-# Python
+# Package build & deployment
 pip
 wheel
+twine
+
+# Testing
 tox
 coverage
+
+# Document
 sphinx
 sphinx_rtd_theme
-twine
-pre-commit
 
-# Formatting
+# Formatting & linting
 black
 flake8
 isort
+pre-commit
 
-# Flask extensions
-Flask==2.2.2
-click ==8.1.3
-Flask-JWT-Extended == 4.4.4
-flask-marshmallow == 0.14.0
-Flask-Migrate == 4.0.4
-flask-smorest == 0.40.0
-Flask-SQLAlchemy == 3.0.3
-marshmallow == 3.19.0
-marshmallow-sqlalchemy == 0.28.1
+# Flask
+Flask
+Flask-JWT-Extended
+marshmallow
+marshmallow-sqlalchemy
+flask-sqlalchemy
+flask-marshmallow
+Flask-Migrate
+flask-smorest
