--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,13 @@ python = "^3.11"
 black = "^23.3.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
-pip = "^23.1"
+pip = "*"
 wheel = "^0.40.0"
 twine = "^4.0.2"
+dependency_injector = "*"
 tox = "^4.4.12"
 coverage = "^7.2.3"
-sphinx = "^6.1.3"
+sphinx = "*"
 sphinx-rtd-theme = "^1.2.0"
 pre-commit = "^3.2.2"
 flask = "^2.2.3"
