--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flask-marshmallow = "^0.15.0"
 flask-migrate = "^4.0.4"
 flask-smorest = "^0.42.0"
 python-dotenv = "^1.0.0"
+flask-cors = "^3.0.10"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
