--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ sphinx-rtd-theme = "^1.2.0"
 pre-commit = "^3.3.2"
 pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
+bumpversion = "^0.6.0"
 
 [build-system]
 requires = ["poetry-core"]
