--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: build
 on:
-    push:
+  push:
+  pull_request:
 jobs:
     release:
         name: PyPI release
+        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
