--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: build
 on:
-  push:
-  pull_request:
+    push:
+    pull_request:
 jobs:
-    release:
+    pypi_release:
         name: PyPI release
         if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
@@ -14,3 +14,18 @@ jobs:
             -   run: pip install twine
             -   run: python setup.py sdist bdist_wheel
             -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Get version from tag
+            -   uses: actions/checkout@v2
+                run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+                id: extract_version_name
+            -   name: Create release on Github
+                uses: actions/create-release@v1
+                env:
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                with:
+                    tag_name: ${{ steps.extract_version_name.outputs.version }}
+                    release_name: ${{ steps.extract_version_name.outputs.version }}
+                    body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
