--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v2
-                run: |
-                    echo "::set-env name=VERSION::$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+            -   name: Extract version name
+                run: echo "::set-env name=VERSION::$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
             -   name: Get commit messages
-                run: |
-                    echo "::set-env name=COMMITS::$(git log --pretty=format:'- %s' ${{ github.event.before }}..${{ github.event.after }})"
+                run: echo "::set-env name=COMMITS::$(git log --pretty=format:'- %s' ${{ github.event.before }}..${{ github.event.after }})"
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
