--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,15 @@ jobs:
         name: Create GitHub Release
         runs-on: ubuntu-latest
         steps:
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
-                run: echo "::set-env name=VERSION::$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
-            -   name: Get commit messages
-                run: echo "::set-env name=COMMITS::$(git log --pretty=format:'- %s' ${{ github.event.before }}..${{ github.event.after }})"
+                id: extract_version_name
+                run: echo "::set-output name=version::$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: ${{ env.VERSION }}
-                    release_name: ${{ env.VERSION }}
-                    body: ${{ env.COMMITS }}
+                    tag_name: ${{ steps.extract_version_name.outputs.version }}
+                    release_name: ${{ steps.extract_version_name.outputs.version }}
+                    body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
