--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,12 @@ jobs:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                run: echo "::set-output name=version::$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+                run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: foo
+                    tag_name: ${{ steps.extract_version_name.outputs.version }}
                     release_name: ${{ steps.extract_version_name.outputs.version }}
-                    body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
+                    body: ${{git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }}}}
