--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,8 @@ jobs:
         steps:
             -   uses: actions/checkout@v2
             -   name: Extract version name
+                run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}')"
                 id: extract_version_name
-#                run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
-                run: echo '${{ github.event.head_commit.message }}'
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
