--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,17 +16,15 @@ jobs:
             -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
     github_release:
         name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         steps:
-            -   uses: actions/checkout@v2
-            -   name: Extract version name
-                run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}')"
-                id: extract_version_name
+            -   uses: actions/checkout@v3.1.0
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: ${{ steps.extract_version_name.outputs.version }}
-                    release_name: ${{ steps.extract_version_name.outputs.version }}
+                    tag_name: ${{ github.ref }}
+                    release_name: ${{ github.ref }}
                     body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
