--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
             -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
     github_release:
         name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags')
+#        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
