--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,17 @@ jobs:
             -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
     github_release:
         name: Create GitHub Release
-#        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
+            -   name: Extract version name
+                id: extract_version_name
+                run: echo "${{ github.ref }}" | sed 's/refs\/tags\///'
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: ${{ github.ref }}
-                    release_name: ${{ github.ref }}
+                    tag_name: v${{ steps.extract_version_name.outputs.version }}
+                    release_name: v${{ steps.extract_version_name.outputs.version }}
                     body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
