--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                run: echo "${{ github.ref }}" | sed 's/refs\/tags\///'
+                run: echo "${{ github.ref }}" | sed 's/refs\/tags\/v//'
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
