--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                run: echo "${{ github.ref }}" | xargs basename
+                run: echo "${{ github.ref }}"
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
