--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,7 @@ jobs:
         name: Debug
         runs-on: ubuntu-latest
         steps:
-            -   name: Display GitHub Ref
-                run:
+            -   run:
                     echo "GitHub Ref: ${{ github.ref }}"
 #    github_release:
 #        name: Create GitHub Release
