--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,18 +4,18 @@ on:
     pull_request:
         branches:
             - '*'
-#jobs:
-#    pypi_release:
-#        name: PyPI release
-#        if: startsWith(github.ref, 'refs/tags')
-#        runs-on: ubuntu-latest
-#        steps:
-#            -   uses: actions/checkout@v3.1.0
-#            -   uses: actions/setup-python@v4.3.0
-#            -   run: python -m pip install --upgrade pip wheel
-#            -   run: pip install twine
-#            -   run: python setup.py sdist bdist_wheel
-#            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
+jobs:
+    pypi_release:
+        name: PyPI release
+        if: startsWith(github.ref, 'refs/tags')
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v3.1.0
+            -   uses: actions/setup-python@v4.3.0
+            -   run: python -m pip install --upgrade pip wheel
+            -   run: pip install twine
+            -   run: python setup.py sdist bdist_wheel
+            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
     github_release:
         name: Create GitHub Release
         runs-on: ubuntu-latest
@@ -23,12 +23,12 @@ on:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                run: echo "${{ github.ref }}"
-#            -   name: Create GitHub Release
-#                uses: actions/create-release@v1
-#                env:
-#                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#                with:
-#                    tag_name: v${{ steps.extract_version_name.outputs.version }}
-#                    release_name: v${{ steps.extract_version_name.outputs.version }}
-#                    body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
+                run: echo "${{ github.ref }}" | sed 's/.*\///'
+            -   name: Create GitHub Release
+                uses: actions/create-release@v1
+                env:
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                with:
+                    tag_name: v${{ steps.extract_version_name.outputs.version }}
+                    release_name: v${{ steps.extract_version_name.outputs.version }}
+                    body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
