--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,18 +4,18 @@ on:
     pull_request:
         branches:
             - '*'
-jobs:
-    pypi_release:
-        name: PyPI release
-        if: startsWith(github.ref, 'refs/tags')
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: actions/checkout@v3.1.0
-            -   uses: actions/setup-python@v4.3.0
-            -   run: python -m pip install --upgrade pip wheel
-            -   run: pip install twine
-            -   run: python setup.py sdist bdist_wheel
-            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
+    #jobs:
+    #    pypi_release:
+    #        name: PyPI release
+    #        if: startsWith(github.ref, 'refs/tags')
+    #        runs-on: ubuntu-latest
+    #        steps:
+    #            -   uses: actions/checkout@v3.1.0
+    #            -   uses: actions/setup-python@v4.3.0
+    #            -   run: python -m pip install --upgrade pip wheel
+    #            -   run: pip install twine
+    #            -   run: python setup.py sdist bdist_wheel
+    #            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
     github_release:
         name: Create GitHub Release
         runs-on: ubuntu-latest
@@ -23,7 +23,7 @@ jobs:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                run: echo "${{ github.ref }}" | sed 's/.*\///'
+                run: echo "${{ github.ref }}" | awk -F"/" '{print $3}'
             -   name: Create GitHub Release
                 uses: actions/create-release@v1
                 env:
