--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     pull_request:
         branches:
             - '*'
-    #jobs:
+jobs:
     #    pypi_release:
     #        name: PyPI release
     #        if: startsWith(github.ref, 'refs/tags')
