--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,5 @@ jobs:
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: v${{ steps.extract_version_name.outputs.version }}
-                    release_name: v${{ steps.extract_version_name.outputs.version }}
-                    body: $(git log --pretty=format:"- %s" ${{ github.event.before }}..${{ github.event.after }})
+                    tag_name: ${{ steps.extract_version_name.outputs}}
+                    release_name: ${{ steps.extract_version_name.outputs }}
