--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,12 @@ jobs:
             -   name: Extract version name
                 id: extract_version_name
                 run: echo "${{ github.ref }}" | awk -F"/" '{print $3}'
-            -   name: Create GitHub Release
-                uses: actions/create-release@v1
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                with:
-                    tag_name: ${{ steps.extract_version_name.outputs}}
-                    release_name: ${{ steps.extract_version_name.outputs }}
+            -   name: debug github version
+                run: echo v${{ steps.extract_version_name.outputs.version }}
+#            -   name: Create GitHub Release
+#                uses: actions/create-release@v1
+#                env:
+#                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#                with:
+#                    tag_name: v${{ steps.extract_version_name.outputs.version }}
+#                    release_name: v${{ steps.extract_version_name.outputs.version }}
