--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,9 @@ jobs:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                run: echo "${{ github.ref }}" | awk -F"/" '{print $3}'
+                run: echo "##[set-output name=version;]$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')"
             -   name: debug github version
-                run: echo "##[set-output name=version;]$(echo v${{ steps.extract_version_name.output }})"
-#                run: echo v${{ steps.extract_version_name.output }}
+                run: echo v${{ steps.extract_version_name.output }}
 #            -   name: Create GitHub Release
 #                uses: actions/create-release@v1
 #                env:
