--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
+            -   uses: actions/create-release@v1
                 run: echo v${{ steps.extract_version_name.output.version }}
-            -   name: Create GitHub Release
-                uses: actions/create-release@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
