--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: ${{ shellRun('echo "${{ github.ref }}" | awk -F"/" "{print $3}"') }}
-                    release_name: ${{ shellRun('echo "${{ github.ref }}" | awk -F"/" "{print $3}"') }}
+                  tag_name: ${{ runShellCommand('echo "${{ github.ref }}" | awk -F"/" "{print $3}"') }}
+                  release_name: ${{ runShellCommand('echo "${{ github.ref }}" | awk -F"/" "{print $3}"') }}
