--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
-            -   uses: actions/create-release@v1
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                with:
-                    tag_name: ${{ shellRun('echo "${{ github.ref }}" | awk -F"/" "{print $3}"') }}
-                    release_name: ${{ shellRun('echo "${{ github.ref }}" | awk -F"/" "{print $3}"') }}
+            -   name: Extract version name
+                id: extract_version_name
+#                run: echo "##[set-output name=version;]$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')"
+                run: echo "version=echo "${{ github.ref }}" | awk -F"/" '{print $3}'" >> $GITHUB_OUTPUT
+            -   name: debug github version
+                run: echo ${{ steps.extract_version_name.output.version }}
+#            -   name: Create GitHub Release
+#                uses: actions/create-release@v1
+#                env:
+#                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#                with:
+#                    tag_name: v${{ steps.extract_version_name.outputs.version }}
+#                    release_name: v${{ steps.extract_version_name.outputs.version }}
