--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             -   name: Extract version name
                 id: extract_version_name
                 #                run: echo "##[set-output name=version;]$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')"
-                run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}') >> $GITHUB_OUTPUT
+                run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')" >> $GITHUB_OUTPUT
             -   name: debug github version
                 run: echo ${{ steps.extract_version_name.output.version }}
 #            -   name: Create GitHub Release
