--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
                 #                run: echo "##[set-output name=version;]$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')"
                 run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')" >> $GITHUB_OUTPUT
             -   name: debug github version
-                run: echo ${{ steps.extract_version_name.output.version }}
+                run: echo ${{ steps.extract_version_name.outputs.version }}
 #            -   name: Create GitHub Release
 #                uses: actions/create-release@v1
 #                env:
