--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,20 +2,18 @@ name: build
 on:
     push:
     pull_request:
-        branches:
-            - '*'
 jobs:
-    #    pypi_release:
-    #        name: PyPI release
-    #        if: startsWith(github.ref, 'refs/tags')
-    #        runs-on: ubuntu-latest
-    #        steps:
-    #            -   uses: actions/checkout@v3.1.0
-    #            -   uses: actions/setup-python@v4.3.0
-    #            -   run: python -m pip install --upgrade pip wheel
-    #            -   run: pip install twine
-    #            -   run: python setup.py sdist bdist_wheel
-    #            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
+    pypi_release:
+        name: PyPI release
+        if: startsWith(github.ref, 'refs/tags')
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v3.1.0
+            -   uses: actions/setup-python@v4.3.0
+            -   run: python -m pip install --upgrade pip wheel
+            -   run: pip install twine
+            -   run: python setup.py sdist bdist_wheel
+            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
     github_release:
         name: Create GitHub Release
         runs-on: ubuntu-latest
@@ -23,14 +21,11 @@ jobs:
             -   uses: actions/checkout@v3.1.0
             -   name: Extract version name
                 id: extract_version_name
-                #                run: echo "##[set-output name=version;]$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')"
                 run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')" >> $GITHUB_OUTPUT
-            -   name: debug github version
-                run: echo ${{ steps.extract_version_name.outputs.version }}
-#            -   name: Create GitHub Release
-#                uses: actions/create-release@v1
-#                env:
-#                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#                with:
-#                    tag_name: v${{ steps.extract_version_name.outputs.version }}
-#                    release_name: v${{ steps.extract_version_name.outputs.version }}
+            -   name: Create GitHub Release
+                uses: actions/create-release@v1
+                env:
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                with:
+                    tag_name: v${{ steps.extract_version_name.outputs.version }}
+                    release_name: v${{ steps.extract_version_name.outputs.version }}
