--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,66 @@
+[build-system]
+requires = ["flit_core<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "fullask-rest-framework"
+description = "A fully-supported flask extension to build REST API."
+readme = "README.md"
+license = { file = "LICENSE" }
+requires-python = ">=3.9"
+authors = [
+    { name = "tgoddessana", email = "twicegoddessana1229@gmail.com" },
+]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Natural Language :: English",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+dependencies = [
+    "Flask",
+    "flask-jwt-extended",
+    "flask-sqlalchemy",
+    "flask-marshmallow",
+    "flask-migrate",
+    "flask-smorest",
+    "flask-cors",
+    "python-dotenv",
+    "dependency-injector",
+    "marshmallow",
+    "marshmallow-sqlalchemy",
+]
+dynamic = ["version"]
+
+[project.scripts]
+fullask-manager = "fullask_rest_framework.cli:main"
+
+[tool.flit.module]
+name = "fullask_rest_framework"
+
+[tool.flit.sdist]
+include = [
+    "fullask_rest_framework/",
+    "README.md",
+]
+exclude = [
+    "docs/",
+    "tests/",
+    ".github/"
+]
+
 [tool.poetry]
 name = "fullask-rest-framework"
-version = "0.1.8"
+version = "0.2.0"
 description = ""
 authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
-readme = "README.md"
-packages = [{ include = "fullask_rest_framework" }]
 
 [tool.poetry.dependencies]
+pip = "*"
 python = "^3.11"
 flask = "^2.2.3"
 flask-jwt-extended = "*"
@@ -23,19 +77,21 @@ dependency_injector = "*"
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 isort = "^5.12.0"
-flake8 = "^6.0.0"
-pip = "*"
 wheel = "^0.40.0"
 twine = "^4.0.2"
-tox = "*"
-coverage = "*"
-sphinx = "*"
-sphinx-rtd-theme = "^1.2.0"
 pre-commit = "^3.3.2"
+bumpversion = "^0.6.0"
+flit = "^3.9.0"
+
+[tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
-bumpversion = "^0.6.0"
+flake8 = "^6.0.0"
+tox = "*"
+coverage = "*"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.group.docs.dependencies]
+sphinx = "*"
+sphinx-rtd-theme = "^1.2.0"
+myst-parser = "*"
+jinja2 = "^3.0"
