--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,12 @@
 [tox]
 envlist = py38, py311, flake8
 
-[travis]
-python =
-    3.9: py39
-    3.10: py310
-    3.11: py311
-
 [testenv:flake8]
 basepython = python
 deps = flake8
 commands = flake8 fullask_rest_framework tests
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
+setenv = PYTHONPATH = {toxinidir}
 
 commands = python setup.py test
