--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
 jobs:
     pypi_release:
         name: PyPI release
-#        if: startsWith(github.ref, 'refs/tags')
+        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
@@ -14,19 +14,19 @@ jobs:
             -   run: pip install flit
             -   run: flit build
             -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
-#    github_release:
-#        name: Create GitHub Release
-#        if: startsWith(github.ref, 'refs/tags')
-#        runs-on: ubuntu-latest
-#        steps:
-#            -   uses: actions/checkout@v3.1.0
-#            -   name: Extract version name
-#                id: extract_version_name
-#                run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')" >> $GITHUB_OUTPUT
-#            -   name: Create GitHub Release
-#                uses: actions/create-release@v1
-#                env:
-#                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#                with:
-#                    tag_name: v${{ steps.extract_version_name.outputs.version }}
-#                    release_name: v${{ steps.extract_version_name.outputs.version }}
+    github_release:
+        name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags')
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v3.1.0
+            -   name: Extract version name
+                id: extract_version_name
+                run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')" >> $GITHUB_OUTPUT
+            -   name: Create GitHub Release
+                uses: actions/create-release@v1
+                env:
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                with:
+                    tag_name: v${{ steps.extract_version_name.outputs.version }}
+                    release_name: v${{ steps.extract_version_name.outputs.version }}
