FIX : merge settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,10 @@ replace = {new_version}
 [bumpversion:file:fullask_rest_framework/__init__.py]
 search = "{current_version}"
 replace = "{new_version}"
+
+[flake8]
+exclude =
+    docs
+    .tox
+max-line-length =
+    89
