--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ flask-marshmallow = "^0.15.0"
 flask-migrate = "^4.0.4"
 flask-smorest = "^0.42.0"
 python-dotenv = "^1.0.0"
-flask-cors = "^3.0.10"
+flask-cors = "^4.0.0"
 dependency_injector = "*"
 
 [tool.poetry.group.dev.dependencies]
@@ -88,10 +88,17 @@ pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
 flake8 = "^6.0.0"
 tox = "*"
+mypy = "*"
 coverage = "*"
+types-Flask-Cors = "*"
+types-Flask-Migrate = "*"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "*"
 sphinx-rtd-theme = "^1.2.0"
 myst-parser = "*"
 jinja2 = "^3.0"
+
+[tool.mypy]
+exclude = ["docs"]
+ignore_missing_imports = true
