feat: Test commit.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,29 @@
-name: build
+name: github action tag release
+
 on:
     push:
-    pull_request:
+        branches:
+            - main
+
 jobs:
-    pypi_release:
-        name: PyPI release
-        if: startsWith(github.ref, 'refs/tags')
+    setup-build-deploy:
+        name: Setup, Build, and Deploy
         runs-on: ubuntu-latest
+        permissions:
+            packages: write
+            contents: write
+            id-token: write
+
         steps:
-            -   uses: actions/checkout@v3.1.0
-            -   uses: actions/setup-python@v4.3.0
-            -   run: python -m pip install --upgrade pip twine
-            -   run: pip install flit
-            -   run: flit build
-            -   run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
-    github_release:
-        name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags')
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: actions/checkout@v3.1.0
-            -   name: Extract version name
-                id: extract_version_name
-                run: echo "version=$(echo "${{ github.ref }}" | awk -F"/" '{print $3}')" >> $GITHUB_OUTPUT
-            -   name: Create GitHub Release
-                uses: actions/create-release@v1
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            -   name: Bump version and push tag
+                id: tag_version
+                uses: mathieudutour/github-tag-action@v6.1
                 with:
-                    tag_name: ${{ steps.extract_version_name.outputs.version }}
-                    release_name: ${{ steps.extract_version_name.outputs.version }}
+                    github_token: ${{ secrets.GITHUB_TOKEN }}
+
+            -   name: Create a GitHub release
+                uses: ncipollo/release-action@v1
+                with:
+                    tag: ${{ steps.tag_version.outputs.new_tag }}
+                    name: Release ${{ steps.tag_version.outputs.new_tag }}
+                    body: ${{ steps.tag_version.outputs.changelog }}
