chore: setup bumpversion

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 0.3.1
+current_version = 0.4.0
 commit = True
-tag = True
+tag = False
 
 [bumpversion:file:pyproject.toml]
 search = {current_version}
@@ -12,8 +12,8 @@ search = "{current_version}"
 replace = "{new_version}"
 
 [flake8]
-exclude = 
+exclude =
 	docs
 	.tox
-max-line-length = 
+max-line-length =
 	89
