chore: Change the configuration file to prevent the bumpversion program from performing commits

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.5.1
-commit = True
+commit = False
 tag = False
 
 [bumpversion:file:pyproject.toml]
@@ -12,8 +12,8 @@ search = "{current_version}"
 replace = "{new_version}"
 
 [flake8]
-exclude = 
+exclude =
 	docs
 	.tox
-max-line-length = 
+max-line-length =
 	89
