--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 jobs:
     pypi_release:
         name: PyPI release
+        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3.1.0
@@ -19,6 +20,7 @@ jobs:
 
     setup-build-deploy:
         name: Setup, Build, and Deploy
+        if: startsWith(github.ref, 'refs/tags')
         runs-on: ubuntu-latest
         permissions:
             packages: write
