--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -1,42 +1,47 @@
 name: build & deploy document
 
+permissions:
+    contents: write
+
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
+
+
 
 jobs:
-  deploy:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
+    deploy:
+        runs-on: ubuntu-20.04
+        steps:
+            -   uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
+            -   name: Setup Python
+                uses: actions/setup-python@v2
+                with:
+                    python-version: '3.8'
 
-      - name: Upgrade pip
-        run: python3 -m pip install --upgrade pip
-      - name: Get pip cache dir
-        id: pip-cache
-        run: echo "::set-output name=dir::$(pip cache dir)"
-      - name: Get pip cache dir
-        run: pip install -r docs/requirements.txt
+            -   name: Upgrade pip
+                run: python3 -m pip install --upgrade pip
+            -   name: Get pip cache dir
+                id: pip-cache
+                run: echo "::set-output name=dir::$(pip cache dir)"
+            -   name: Get pip cache dir
+                run: pip install -r docs/requirements.txt
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+            -   name: Cache dependencies
+                uses: actions/cache@v2
+                with:
+                    path: ${{ steps.pip-cache.outputs.dir }}
+                    key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+                    restore-keys: |
+                        ${{ runner.os }}-pip-
 
-      - name: Build html
-        run: cd docs && make html
+            -   name: Build html
+                run: cd docs && make html
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html
+            -   name: Deploy
+                uses: peaceiris/actions-gh-pages@v3
+                with:
+                    github_token: ${{ secrets.GITHUB_TOKEN }}
+                    publish_dir: docs/_build/html
